# agriassist

./: .env.example  .gitignore  QUICKSTART.md  nixpacks.toml  pyproject.toml  requirements.txt  run.ps1  setup-uv.ps1  sync_neo4j_sql.py  test_output.txt  tmp_check_alerts.py  tmp_check_alerts_raw.py  tmp_check_images.py  tmp_check_new_alerts.py  tmp_check_scans.py  tmp_create_test_alert.py  tmp_create_test_alert_postgres.py  tmp_delete_test_alerts.py  tmp_get_farm_coords.py
agriassist/: AGRIASSIST_DOCUMENTATION.md  migrate_blockchain_columns.py  neo4j_dump.txt  requirements.txt  sync_neo4j.py  test_phase3.py
agriassist/app/: main.py
agriassist/app/core/: config.py  neo4j_driver.py
agriassist/app/models/: farm.py  schemas.py  user.py
agriassist/app/routers/: admin.py
agriassist/app/services/: blockchain_client.py  gemini_service.py  (+1 more)
app/: main.py
app/core/: config.py  database.py  security.py  storage.py
app/models/: farm.py  schemas.py  urban_farmer_models.py  user.py
app/routers/: admin.py  auth.py  dashboard.py  farms.py  gamification.py  plants.py  voice_bot.py
app/services/: alert_service.py  gamification_service.py  gemini_service.py  graph_service.py  urban_gemini_service.py  vision_service.py
app/templates/: base.html  dashboard.html  leaderboard.html
blockchain/: .gitignore  hardhat.config.js  package-lock.json  package.json  server.js
blockchain/config/: deployment.json
blockchain/contracts/: FarmVerificationRegistry.sol
blockchain/scripts/: deploy.js
blockchain/services/: blockchainService.js
scratch/: list_models.py
(+22 files in other folders)
